tests/ui/feature-gates/feature-gate-asm_experimental_arch.stderr
error[E0658]: inline assembly is not stable yet on this architecture
  --> $DIR/feature-gate-asm_experimental_arch.rs:13:5
   |
LL |     asm!("");
   |     ^^^^^^^^
   |
   = note: see issue #93335 <https://github.com/rust-lang/rust/issues/93335> for more information
   = help: add `#![feature(asm_experimental_arch)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
